package sensationdriver;

message Command {
  enum Region {
    LEFT_HAND = 0;
    LEFT_FOREARM = 1;
    LEFT_UPPER_ARM = 2;
  }

  required Region region = 1;
  required int32 actor_index = 2;
  required float intensity = 3;
}